feat(UserServiceIT) : add integration test for user service